tests/errors/asm.HC
//ERR: inline asm blocks are not supported
asm {
HELLO: DU8 "x",0;
}
"hi\n";
